Ingress/Ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2   # maxSurge is an optional field that specifies the maximum number of Pods that can be created over the desired number of Pods.
      maxUnavailable: 1   # maxSurge is an optional field that specifies the maximum number of Pods that can be created over the desired number of Pods.
  revisionHistoryLimit: 4
  paused: false
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      role: webserver
    matchExpressions:
      - {key: version, operator: In, values: [v1, v2, v3]}
  template:
    metadata:
      name: web
      labels:
        role: webserver
        version: v1
        tier: frond-end
    spec:
      containers:
        - name: web
          image: nginx
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    role: web-service
spec:
  selector:
    role: webserver
    version: v1
  type: ClusterIP
  ports:
    - port: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
     kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jino.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
